--- a/assets/styles/admin/base.css
+++ b/assets/styles/admin/base.css
@@ -10,12 +10,12 @@
         font-weight: normal;
         font-style: normal;
         font-display: swap;
-        src: url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Regular.woff2")
+        /*src: url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Regular.woff2")
                 format("woff2"),
             url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Regular.woff")
                 format("woff"),
             url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Regular.ttf")
-                format("truetype");
+                format("truetype");*/
     }
 
     @font-face {
@@ -23,12 +23,12 @@
         font-weight: bold;
         font-style: normal;
         font-display: swap;
-        src: url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Bold.woff2")
+        /*src: url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Bold.woff2")
                 format("woff2"),
             url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Bold.woff")
                 format("woff"),
             url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Bold.ttf")
-                format("truetype");
+                format("truetype");*/
     }
 
     @font-face {
@@ -36,12 +36,12 @@
         font-weight: normal;
         font-style: italic;
         font-display: swap;
-        src: url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Italic.woff2")
+        /*src: url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Italic.woff2")
                 format("woff2"),
             url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Italic.woff")
                 format("woff"),
             url("~@minvws/nl-rdo-rijksoverheid-ui-theme/fonts/ro-sans-web/RO-SansWebText-Italic.ttf")
-                format("truetype");
+                format("truetype");*/
     }
 
     /* Overwrite the Tailwind defaults */
