--- a/assets/styles/public/index.scss
+++ b/assets/styles/public/index.scss
@@ -1,5 +1,8 @@
 @import "./variables";
-@import "@minvws/nl-rdo-rijksoverheid-ui-theme/scss/main";
+
+@import "@minvws/manon/hidden";
+@import "@minvws/manon/visually-hidden";
+@import "@minvws/manon/pagination";
 
 @import "./helpers";
 @import "./components/all";
