--- a/templates/admin/document_macros.html.twig
+++ b/templates/admin/document_macros.html.twig
@@ -9,7 +9,7 @@
         <div class="bhr-card mt-10">
             <h2 class="bhr-title mb-6">{{ titleTranslationKey | trans }}</h2>
 
-            <table class="bhr-table table-fixed">
+            <table class="bhr-table table-fixed" data-e2e-name="document-history">
                 <caption class="sr-only">{{ titleTranslationKey | trans }}</caption>
                 <thead>
                     <th class="bhr-column-head w-52" scope="col">{{ 'global.date' | trans() }}</th>
