--- a/templates/document_macros.html.twig
+++ b/templates/document_macros.html.twig
@@ -212,7 +212,7 @@
         <div class="mt-16">
             <h2 class="woo-h2 woo-h2-spacing">{{ titleTranslationKey | trans }}</h2>
 
-            <div class="woo-responsive-table">
+            <div class="woo-responsive-table" data-e2e-name="document-history">
                 <table class="woo-table">
                     <caption class="sr-only">{{ titleTranslationKey | trans }}</caption>
                     <thead>
