--- a/templates/search/entries/dossier.html.twig
+++ b/templates/search/entries/dossier.html.twig
@@ -6,11 +6,12 @@
             href="{{ path('app_woodecision_detail', { prefix: entry.dossier.documentPrefix, dossierId: entry.dossier.dossierNr }) }}"
         >{{ entry.dossier.title }}</a>
     </h3>
-
     <ul class="woo-search-result__spec-list">
         <li class="woo-search-result__spec">
-            <twig:Public:Icon name="map" class="mr-1" size="20" />
-            <span class="font-bold">{{ 'public.global.woo_dossier' | trans }}</span>
+            <span class="bg-gray-100 rounded-full inline-grid place-content-center align-bottom aspect-square w-6">
+                <twig:Public:Icon name="map" size="20" />
+            </span>
+            <span class="font-bold text-gray-700">{{ 'public.global.woo_dossier' | trans }}</span>
         </li>
         <li class="woo-search-result__spec">
             {{ "global.number_of_documents" | trans({"count": entry.dossier.documentCount})}}</span>
